--- a/src/commcare_cloud/ansible/roles/kafka/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/kafka/tasks/main.yml
@@ -47,12 +47,12 @@
 - name: Configure Kafka server
   template: src=server.properties.j2 dest="{{kafka_conf_dir}}/server.properties"
 
-- name: Copy Kafka partiontion reassign Script
-  file:
-    src: kafka-reassign-tool.rb
-    dest: "{{ kafka_data_dir }}"/bin
-    owner: root
-    group: root
+- name: Copy Kafka partition reassign Script
+  get_url:
+    url: "https://raw.githubusercontent.com/dimas/kafka-reassign-tool/master/kafka-reassign-tool" 
+    dest: "{{ kafka_data_dir }}/bin"
+    owner: "{{ kafka_user }}"
+    group: "{{ kafka_group }}"
     mode: 0755
 
 - name: Copies kafka log4j.properties
