--- a/src/commcare_cloud/ansible/roles/common_installs/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/common_installs/tasks/main.yml
@@ -20,15 +20,36 @@
   apt_repository: repo='ppa:deadsnakes/ppa' state=present
   register: add_python_ppa_trusty
   when: ansible_distribution_version == '14.04'
+  tags:
+    - py3
 
 - name: Add Python PPA for bionic and xenial
   apt_repository: repo='ppa:jonathonf/python-3.6' state=present
   register: add_python_ppa_bionic
   when: ansible_distribution_version == '18.04' or ansible_distribution_version == '16.04'
+  tags:
+    - py3
 
 - name: Update package list
   apt: update_cache=yes
-  when: add_mosh_repo is changed or add_postgres_repo is changed or add_pango_repo is changed or add_python_ppa_trusty is changed or add_python_ppa_bionic is changed
+  when: |
+    add_mosh_repo is defined and add_mosh_repo is changed or
+    add_postgres_repo is defined and add_postgres_repo is changed or
+    add_pango_repo is defined and add_pango_repo is changed or
+    add_python_ppa_trusty is defined and add_python_ppa_trusty is changed or
+    add_python_ppa_bionic is defined and add_python_ppa_bionic is changed
+  tags:
+    - py3
+
+
+- name: Install python3.6 packages
+  become: yes
+  apt:
+    name:
+      - python3.6
+      - python3.6-dev
+  tags:
+    - py3
 
 # Install base packages, common to all servers
 - name: Install common packages
@@ -67,8 +88,6 @@
       - monit # service restarter
       - libcairo2
       - libpango1.0-0
-      - python3.6
-      - python3.6-dev
 
 - include: trusty_apt_installs.yml
   when: ansible_distribution_version == '14.04'
