--- a/src/commcare_cloud/ansible/roles/formplayer/defaults/main.yml
+++ b/src/commcare_cloud/ansible/roles/formplayer/defaults/main.yml
@@ -3,4 +3,5 @@ formplayer_sentry_dsn: ''
 # (you can't use s for seconds, but m, h, d work for minute, hour, day)
 # formplayer_archive_time_spec: '10m'
 formplayer_purge_time_spec: '2d'
-formplayer_release_dir: "{{ formplayer_build_dir }}/formplayer__{{ new_release_name }}"
+formplayer_release_dir: >
+  {{ formplayer_build_dir }}/{{ "releases/" + new_release_name if new_release_name|default(None) else "current" }}
