--- a/src/commcare_cloud/ansible/roles/formplayer/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/formplayer/tasks/main.yml
@@ -54,24 +54,44 @@
     - formplayer_deploy
   with_items:
     - "{{ formplayer_build_dir }}"
-    - "{{ formplayer_release_dir }}/libs"
+    - "{{ formplayer_release_dir }}"
     - "{{ formplayer_data_dir }}"
 
 - name: Download formplayer release
   get_url:
     url: "{{ formplayer_build_url }}"
-    dest: "{{ formplayer_release_dir }}/libs/formplayer.jar"
+    dest: "{{ formplayer_release_dir }}/formplayer.jar"
     mode: 0744
     owner: "{{ cchq_user }}"
     group: "{{ cchq_user }}"
   tags:
     - formplayer_deploy
 
+- name: Check if the "current" directory exists
+  stat:
+    path: "{{ formplayer_build_dir }}/current"
+  register: current_stat
+  tags:
+    - formplayer_deploy
+
+- name: Copy config files from current release
+  become: yes
+  copy:
+    remote_src: yes
+    src: "{{ formplayer_build_dir }}/current/{{ item }}"
+    dest: "{{ formplayer_release_dir }}/{{ item }}"
+  with_items:
+    - application.properties
+    - sentry.properties
+  tags:
+    - formplayer_deploy
+  when: new_release_name|default(None) and current_stat.stat.exists
+
 - name: Copy Spring application.properties
   become: yes
   template:
     src: application.properties.j2
-    dest: "{{ formplayer_build_dir }}/application.properties"
+    dest: "{{ formplayer_release_dir }}/application.properties"
     group: cchq
     owner: cchq
     mode: 0644
@@ -84,7 +104,7 @@
   become: yes
   template:
     src: sentry.properties.j2
-    dest: "{{ formplayer_build_dir }}/sentry.properties"
+    dest: "{{ formplayer_release_dir }}/sentry.properties"
     group: cchq
     owner: cchq
     mode: 0644
@@ -98,12 +118,14 @@
 # so that if setting up a release fails, `current` never gets linked to it
 # giving us nearly atomic formplayer deploys
 - name: Link formplayer jar
-  copy:
-    remote_src: yes
-    src: "{{ formplayer_release_dir }}/libs/formplayer.jar"
-    dest: "{{ formplayer_build_dir }}/formplayer.jar"
-    mode: 0744
+  become: yes
+  file:
+    state: link
+    src: "{{ formplayer_release_dir }}"
+    path: "{{ formplayer_build_dir }}/current"
+    mode: 0755
     owner: "{{ cchq_user }}"
     group: "{{ cchq_user }}"
   tags:
     - formplayer_deploy
+  when: new_release_name|default(None)
