Add MinIO setup

--- a/src/commcare_cloud/ansible/deploy_db.yml
+++ b/src/commcare_cloud/ansible/deploy_db.yml
@@ -25,6 +25,12 @@
   roles:
     - {role: redis, tags: 'redis'}
 
+- name: MinIO
+  hosts: minio
+  become: true
+  roles:
+    - {role: minio, tags: 'minio'}
+
 - name: Elasticsearch
   hosts: elasticsearch
   become: true
