setup minio on dev env

--- a/environments/development/inventory.ini
+++ b/environments/development/inventory.ini
@@ -5,6 +5,16 @@
 hostname='app1'
 ansible_python_interpreter = '/usr/bin/python3'
 
+[minio1]
+192.168.33.31
+
+[minio2]
+192.168.33.32
+
+[minio]
+192.168.33.31
+192.168.33.32
+
 [citusdb1]
 192.168.33.31
 
