Add comment about copying formplayer configs for nice diff

--- a/src/commcare_cloud/ansible/roles/formplayer/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/formplayer/tasks/main.yml
@@ -74,6 +74,9 @@
   tags:
     - formplayer_deploy
 
+
+# This task copies the respective config files from "current", if applicable
+# so that the next tasks print out a nice diff instead of the full contents of the file
 - name: Copy config files from current release
   become: yes
   copy:
