Fix ansible error with bare string variable in conditional

--- a/src/commcare_cloud/ansible/roles/formplayer/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/formplayer/tasks/main.yml
@@ -88,7 +88,7 @@
     - sentry.properties
   tags:
     - formplayer_deploy
-  when: new_release_name
+  when: new_release_name != None
 
 - name: Copy Spring application.properties
   become: yes
@@ -131,4 +131,4 @@
     group: "{{ cchq_user }}"
   tags:
     - formplayer_deploy
-  when: new_release_name
+  when: new_release_name != None
