few more changes

--- a/environments/development/inventory.ini
+++ b/environments/development/inventory.ini
@@ -11,9 +11,17 @@ ansible_python_interpreter = '/usr/bin/python3'
 [minio2]
 192.168.33.32
 
+[minio3]
+192.168.33.33
+
+[minio4]
+192.168.33.15
+
 [minio]
 192.168.33.31
 192.168.33.32
+192.168.33.33
+192.168.33.15
 
 [citusdb1]
 192.168.33.31
