override minio dir for eCHIS

--- a/environments/echis/public.yml
+++ b/environments/echis/public.yml
@@ -91,3 +91,7 @@ PY3_RUN_GUNICORN: False
 PY3_RUN_MANAGEMENT: False
 PY3_RUN_PILLOWTOP: False
 PY3_RUN_WEBSOCKETS: False
+
+minio_server_datadirs:
+  - /opt/data/minio/
+minio_server_cluster_nodes: "{{ groups['minio']|map('string_prefix', '/opt/data')|map('string_postfix', 'http://')|list }}"
