--- a/src/commcare_cloud/ansible/roles/formplayer/vars/main.yml
+++ b/src/commcare_cloud/ansible/roles/formplayer/vars/main.yml
@@ -9,8 +9,8 @@ formplayer_build_url: "{{
 }}"
 formplayer_current_dir: "{{ formplayer_build_dir }}/current"
 formplayer_release_dir: '{{ formplayer_build_dir }}/releases/{{ new_release_name }}'
-formplayer_target_dir_for_this_run: "{{
+_formplayer_target_dir: "{{
   formplayer_current_dir
-  if this_ansible_run_should_update_formplayer_in_place
+  if _should_update_formplayer_in_place
   else formplayer_release_dir
 }}"
