--- a/src/commcare_cloud/ansible/group_vars/all.yml
+++ b/src/commcare_cloud/ansible/group_vars/all.yml
@@ -62,8 +62,8 @@ old_s3_bulk_delete_chunksize: ~
 
 # To use these vars without deploying the riak control machine
 # add s3_access_key and s3_secret_key to the ansible secret config directory
-s3_blob_db_access_key: "{{ s3_access_key if s3_access_key else (hostvars[riakcs_control]['riak_key'] if s3_blob_db_enabled else '') }}"
-s3_blob_db_secret_key:  "{{ s3_secret_key if s3_secret_key else (hostvars[riakcs_control]['riak_secret'] if s3_blob_db_enabled else '') }}"
+s3_blob_db_access_key: "{{ s3_access_key|default('') }}"
+s3_blob_db_secret_key:  "{{ s3_secret_key|default('') }}"
 
 datadog_integration_cloudant: false
 datadog_integration_couch: false
