--- a/environments/production/inventory.ini
+++ b/environments/production/inventory.ini
@@ -89,11 +89,11 @@ remote_postgresql
 [ansible_skip:children]
 remote_postgresql
 
-[rabbit0]
-10.202.42.98 hostname=rabbit0-production ufw_private_interface=eth0
+[rabbit1]
+10.202.42.80 hostname=rabbit1-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 
 [rabbitmq:children]
-rabbit0
+rabbit1
 
 [rabbitmq:vars]
 swap_size=2G
