--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -197,6 +197,13 @@ servers:
     volume_size: 80
     group: "rabbitmq"
     os: trusty
+  - server_name: "rabbit1-production"
+    server_instance_type: t3.large
+    network_tier: "db-private"
+    az: "c"
+    volume_size: 80
+    group: "rabbitmq"
+    os: bionic
 
   - server_name: "celery9-production"
     server_instance_type: r5.2xlarge
