--- a/src/commcare_cloud/ansible/roles/rabbitmq/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/rabbitmq/tasks/main.yml
@@ -40,4 +40,4 @@
   when: (rabbitmq_create_cluster | bool) and ( ansible_fqdn != hostvars[rabbitmq_cluster_master]['ansible_fqdn'] )
 
 - include: ha-policy.yml
-  when: (rabbitmq_create_cluster| bool ) and ( ansible_fqdn != hostvars[rabbitmq_cluster_master]['ansible_fqdn'] )
+  when: (rabbitmq_create_cluster| bool ) and ( ansible_fqdn == hostvars[rabbitmq_cluster_master]['ansible_fqdn'] )
