--- a/environments/phi-cas/inventory.ini
+++ b/environments/phi-cas/inventory.ini
@@ -1,59 +1,59 @@
-[swiss0]
-185.19.29.53 hostname=swiss0 swap_size=8G ufw_private_interface=eth0
+[phi-cas0]
+100.71.128.7 hostname=phi-cas0 swap_size=8G ufw_private_interface=eth0
 
 [proxy:children]
-swiss0
+phi-cas0
 
 [webworkers:children]
-swiss0
+phi-cas0
 
 [couchdb2_proxy:children]
-swiss0
+phi-cas0
 
 [couchdb2:children]
-swiss0
+phi-cas0
 
 [postgresql:children]
-swiss0
+phi-cas0
 
 [zookeeper:children]
-swiss0
+phi-cas0
 
 [kafka:children]
-swiss0
+phi-cas0
 
 [kafka:vars]
 kafka_broker_id=0
 
 [pg_backup:children]
-swiss0
+phi-cas0
 
 [celery:children]
-swiss0
+phi-cas0
 
 [pillowtop:children]
-swiss0
+phi-cas0
 
 [formplayer:children]
-swiss0
+phi-cas0
 
 [redis:children]
-swiss0
+phi-cas0
 
 [elasticsearch:children]
-swiss0
+phi-cas0
 
 [elasticsearch:vars]
 elasticsearch_node_name=hqes1
 
 [shared_dir_host:children]
-swiss0
+phi-cas0
 
 [pg_standby:children]
 # empty
 
 [control:children]
-swiss0
+phi-cas0
 
 [django_manage:children]
-swiss0
+phi-cas0
