--- a/environments/phi-cas/proxy.yml
+++ b/environments/phi-cas/proxy.yml
@@ -1,3 +1,3 @@
-SITE_HOST: 'swiss.commcarehq.org'
+SITE_HOST: 'phi-cas.commcarehq.org'
 letsencrypt_cchq_ssl: True
-primary_ssl_env: 'swiss'
+primary_ssl_env: 'phi-cas'
