--- a/environments/production/inventory.ini
+++ b/environments/production/inventory.ini
@@ -135,15 +135,15 @@ swap_size=8G
 [pillowtop:children]
 pillow1
 
-[formplayer0]
-10.202.10.21 hostname=formplayer0-production ufw_private_interface=eth0
+[formplayer2]
+10.202.10.129 hostname=formplayer2-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 
-[formplayer1]
-10.202.10.4 hostname=formplayer1-production ufw_private_interface=eth0
+[formplayer3]
+10.202.10.13 hostname=formplayer3-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 
 [formplayer:children]
-formplayer0
-formplayer1
+formplayer2
+formplayer3
 
 [redis1]
 10.202.40.34 hostname=redis1-production ufw_private_interface=eth0 swap_size=1G
