--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -257,6 +257,22 @@ servers:
     volume_size: 150
     group: "formplayer"
     os: trusty
+    
+  - server_name: "formplayer2-production"
+    server_instance_type: t3.large
+    network_tier: "app-private"
+    az: "a"
+    volume_size: 150
+    group: "formplayer"
+    os: bionic
+    
+  - server_name: "formplayer3-production"
+    server_instance_type: t3.large
+    network_tier: "app-private"
+    az: "a"
+    volume_size: 150
+    group: "formplayer"
+    os: bionic
 
   - server_name: "redis1-production"
     server_instance_type: r5.xlarge
