--- a/environments/phi-cas/public.yml
+++ b/environments/phi-cas/public.yml
@@ -14,8 +14,8 @@ redis_maxmemory: 4gb
 
 ssh_allow_password: False
 
-backup_blobdb: True
-backup_postgres: plain
+backup_blobdb: False
+backup_postgres: False
 backup_es_s3: False
 backup_couch: False
 postgres_s3: False
