--- a/environments/phi-cas/public.yml
+++ b/environments/phi-cas/public.yml
@@ -46,12 +46,12 @@ couchdb_use_haproxy: True
 BROKER_URL: 'redis://{{ groups.redis.0 }}:6379/0'
 
 root_email: commcarehq-ops+root@dimagi.com
-server_email: commcarehq-noreply@dimagi.com
+server_email: commcarehq-noreply@icds-cas.gov.in
 server_admin_email: commcarehq-ops+admins@dimagi.com
-default_from_email: commcarehq-noreply@dimagi.com
+default_from_email: commcarehq-noreply@icds-cas.gov.in
 support_email: support@dimagi.com
 probono_support_email: pro-bono@dimagi.com
-cchq_bug_report_email: commcarehq-bug-reports@dimagi.com
+cchq_bug_report_email: commcarehq-bug-reports@icds-cas.gov.in
 accounts_email: accounts@dimagi.com
 data_email: datatree@dimagi.com
 subscription_change_email: accounts+subchange@dimagi.com
