disable airflow integration

--- a/environments/phi-cas/public.yml
+++ b/environments/phi-cas/public.yml
@@ -21,6 +21,7 @@ backup_couch: False
 postgres_s3: False
 blobdb_s3: True
 couch_s3: False
+datadog_integration_airflow: False
 
 KSPLICE_ACTIVE: no
 
