--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -161,6 +161,13 @@ servers:
     volume_size: 80
     group: "couchdb2_proxy"
     os: trusty
+  - server_name: "couchproxy1-production"
+    server_instance_type: "t3.medium"
+    network_tier: "db-private"
+    az: "a"
+    volume_size: 80
+    group: "couchdb2_proxy"
+    os: bionic
 
   - server_name: "couch12-production"
     server_instance_type: c5.9xlarge
@@ -290,6 +297,13 @@ servers:
     volume_size: 80
     group: "postgresql"
     os: trusty
+  - server_name: "pgbouncer1-production"
+    server_instance_type: t3.medium
+    network_tier: "db-private"
+    az: "a"
+    volume_size: 80
+    group: "postgresql"
+    os: bionic
 
 
 
