--- a/environments/production/inventory.ini
+++ b/environments/production/inventory.ini
@@ -1,5 +1,5 @@
 [proxy1]
-10.202.20.47 hostname=proxy1-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 public_ip=
+10.202.20.47 hostname=proxy1-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 public_ip=100.24.216.221
 
 [proxy:children]
 proxy1
