--- a/environments/phi-cas/proxy.yml
+++ b/environments/phi-cas/proxy.yml
@@ -1,3 +1,3 @@
-SITE_HOST: 'phi-cas.commcarehq.org'
+SITE_HOST: 'www.phi-cas.commcarehq.org'
 letsencrypt_cchq_ssl: True
 primary_ssl_env: 'phi-cas'
