--- a/environments/phi-cas/public.yml
+++ b/environments/phi-cas/public.yml
@@ -1,5 +1,5 @@
-DATADOG_ENABLED: True
-DATADOG_INTEGRATIONS_ENABLED: True
+DATADOG_ENABLED: False
+DATADOG_INTEGRATIONS_ENABLED: False
 
 elasticsearch_endpoint: '{{ groups.elasticsearch.0 }}'
 elasticsearch_memory: '4096m'
