Fix allowed hosts

--- a/environments/phi-cas/public.yml
+++ b/environments/phi-cas/public.yml
@@ -73,6 +73,8 @@ TWO_FACTOR_GATEWAY_ENABLED: True
 localsettings:
   ALLOWED_HOSTS:
     - 100.71.128.7
+    - phi-cas.commcarehq.org
+    - www.phi-cas.commcarehq.org
   BANK_ADDRESS: { 'first_line': "1 Citizens Drive", 'city': "Riverside", 'region': "RI", 'postal_code': "02915" }
   BANK_NAME: "RBS Citizens N.A."
   BANK_SWIFT_CODE: 'CTZIUS33'
