--- a/environments/icds-cas/postgresql.yml
+++ b/environments/icds-cas/postgresql.yml
@@ -3,13 +3,7 @@ DEFAULT_POSTGRESQL_HOST: pgmain0
 REPORTING_DATABASES:
   ucr: ucr
   icds-ucr-non-dashboard: icds-ucr-non-dashboard
-  icds-ucr:
-    WRITE: icds-ucr
-    READ:
-      - [icds-ucr-standby0, 10]
-      - [icds-ucr-standby1, 10]
-      - [icds-ucr-standby2, 10]
-      - [icds-ucr-standby3, 10]
+  icds-ucr: icds-ucr
   icds-test-ucr: icds-ucr
   icds-ucr-citus: icds-ucr-citus
 
@@ -153,30 +147,6 @@ dbs:
       host: pgwarehouse0
       django_migrate: True
   standby:
-    - django_alias: icds-ucr-standby0
-      name: commcarehq_icds_aggregatedata
-      host: pgucrstandby0
-      create: False
-      django_migrate: False
-      hq_acceptable_standby_delay: 1800
-    - django_alias: icds-ucr-standby1
-      name: commcarehq_icds_aggregatedata
-      host: pgucrstandby1
-      create: False
-      django_migrate: False
-      hq_acceptable_standby_delay: 1800
-    - django_alias: icds-ucr-standby2
-      name: commcarehq_icds_aggregatedata
-      host: pgucrstandby2
-      create: False
-      django_migrate: False
-      hq_acceptable_standby_delay: 1800
-    - django_alias: icds-ucr-standby3
-      name: commcarehq_icds_aggregatedata
-      host: pgucrstandby3
-      create: False
-      django_migrate: False
-      hq_acceptable_standby_delay: 1800
     - django_alias: pgmainstandby0
       name: commcarehq
       host: pgmainstandby0
