--- a/environments/india/terraform.yml
+++ b/environments/india/terraform.yml
@@ -194,6 +194,6 @@ proxy_servers:
 
 rds_instances:
   - identifier: "pgmain0-india"
-    instance_type: "db.t2.2xlarge"
+    instance_type: "db.t3.xlarge"
     storage: 500
     multi_az: true
