--- a/src/commcare_cloud/manage_commcare_cloud/monitors/es_cluster_status.yml
+++ b/src/commcare_cloud/manage_commcare_cloud/monitors/es_cluster_status.yml
@@ -1,4 +1,4 @@
-env_key: host.environment
+env_key: environment.name
 id: 654754
 message: |-
   https://confluence.dimagi.com/display/commcarehq/Firefighting+HQ#FirefightingHQ-Elasticsearch
