--- a/src/commcare_cloud/manage_commcare_cloud/monitors/pillow_errors.yml
+++ b/src/commcare_cloud/manage_commcare_cloud/monitors/pillow_errors.yml
@@ -30,6 +30,6 @@ options:
   silenced: {}
   thresholds: {critical: 10000.0, warning: 5000.0}
   timeout_h: 0
-query: avg(last_1h):sum:commcare.pillowtop.error_queue{!environment:icds} by {environment} > 10000
+query: avg(last_1h):sum:commcare.pillowtop.error_queue{*} by {environment} > 10000
 tags: [opsgenie]
 type: metric alert
