--- a/src/commcare_cloud/manage_commcare_cloud/monitors/disk_icds.yml
+++ b/src/commcare_cloud/manage_commcare_cloud/monitors/disk_icds.yml
@@ -1,25 +1,35 @@
 env_key: host.environment
-id: 8797655
+id: 11986021
 message: |-
-  {{#is_alert}}ALERT: Disk usage {{comparator}} {{threshold}} ({{value}})  @jira-iio-maintenance_alert{{/is_alert}}
-  {{#is_alert_recovery}}Thanks for the action. The alert has been recovered.  @jira-update{{/is_alert_recovery}}
-name: '[ICDS] disk alert {{host.name}} {{device.name}}'
+  {{#is_alert}}ALERT: Disk usage {{comparator}} {{threshold}} ({{value}}) {{/is_alert}}
+  {{#is_warning}}WARNING: Disk usage {{comparator}} {{warn_threshold}} ({{value}}) {{/is_warning}}
+  https://dimagi.github.io/commcare-cloud/firefighting/#full-drives--out-of-disk-space
+  @slack-alerts-icds
+name: '[ICDS] Disk space running low on {{host.name}} ({{device.name}})'
 options:
   escalation_message: |-
-    Disk Space Used will cross the  {{threshold}} mark in next 2 weeks.
-    << notification_block >>
-  include_tags: true
+    {{#is_alert}}Disk usage still >= {{threshold}} ({{value}}) {{/is_alert}}
+    {{#is_warning}}Disk usage still >= {{warn_threshold}} ({{value}}) {{/is_warning}}
+    https://confluence.dimagi.com/display/commcarehq/Firefighting+HQ#FirefightingHQ-FullDrives/OutofDiskSpace
+  include_tags: false
   locked: false
   new_host_delay: 300
   no_data_timeframe: null
   notify_audit: false
   notify_no_data: false
-  renotify_interval: 0
+  renotify_interval: 1440
   require_full_window: true
-  silenced: {}
-  thresholds: {critical: 0.9, critical_recovery: 0.8}
+  silenced:
+    host:pgucr.internal-icds.commcarehq.org: null
+    host:pgucrstandby0.internal-icds.commcarehq.org: null
+    host:pgucrstandby1.internal-icds.commcarehq.org: null
+    host:pgucrstandby2.internal-icds.commcarehq.org: null
+    host:pgucrstandby3.internal-icds.commcarehq.org: null
+  thresholds:
+    critical: 0.9
+    warning: 0.8
   timeout_h: 0
-query: max(next_1mo):forecast(avg:system.disk.in_use{environment:icds} by {host,device},
-  'linear', 1, interval='120m', history='1mo', model='default') >= 0.9
-tags: [JIRA, ICDS]
-type: query alert
+query: min(last_1h):avg:system.disk.in_use{environment:icds,device:/opt/data} by {host,device,environment}
+  >= 0.9
+tags: []
+type: metric alert
