Grant usage permissions to commcare user

--- a/src/commcare_cloud/ansible/setup_pg_logical_replication.yml
+++ b/src/commcare_cloud/ansible/setup_pg_logical_replication.yml
@@ -140,6 +140,14 @@
       when: item.target_host == inventory_hostname
       register: result
 
+    - name: Grant usage to hq user
+      postgres
+      postgresql_query:
+        db: '{{ item.target_db_name }}'
+        query: "GRANT USAGE ON SCHEMA pglogical TO {{ secrets.POSTGRES_USERS.commcare }};"
+      loop: "{{ replications }}"
+      when: item.target_host == inventory_hostname
+
 # status
 - hosts:
     - shard_dbs
