--- a/environments/production/inventory.ini
+++ b/environments/production/inventory.ini
@@ -145,11 +145,11 @@ pillow1
 formplayer2
 formplayer3
 
-[redis1]
-10.202.40.34 hostname=redis1-production ufw_private_interface=eth0 swap_size=1G
+[redis0]
+10.202.40.233 hostname=redis0-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 swap_size=1G
 
 [redis:children]
-redis1
+redis0
 
 [shareddir0]
 10.202.40.191 hostname=shareddir0-production ufw_private_interface=eth0
