--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -258,6 +258,13 @@ servers:
     volume_size: 60
     group: "redis"
     os: trusty
+  - server_name: "redis0-production"
+    server_instance_type: r5.xlarge
+    network_tier: "db-private"
+    az: "a"
+    volume_size: 60
+    group: "redis"
+    os: bionic
 
   - server_name: "shareddir0-production"
     server_instance_type: t3.micro
