--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -220,7 +220,7 @@ servers:
     group: "celery"
     os: bionic
   - server_name: "celery12-production"
-    server_instance_type: r5.xlarge
+    server_instance_type: t3.2xlarge  # todo: switch back to r5.xlarge after t3 RI expires
     network_tier: "app-private"
     az: "c"
     volume_size: 150
