--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -18,7 +18,7 @@ backup_couch: False
 nadir_hour: 16
 
 #RabbitMQ Broker URL
-BROKER_URL: 'amqp://{{ AMQP_USER }}:{{ AMQP_PASSWORD }}@{{ AMQP_HOST }}:5672/{{ AMQP_NAME }};amqp://{{ AMQP_USER }}:{{ AMQP_PASSWORD }}@{{ AMQP_HOST1 }}:5672/{{ AMQP_NAME }}'
+BROKER_URL: 'amqp://{{ AMQP_USER }}:{{ AMQP_PASSWORD }}@{{ AMQP_HOST }}:5672/{{ AMQP_NAME }};amqp://{{ AMQP_USER }}:{{ AMQP_PASSWORD }}@{{ groups.rabbitmq.1 }}:5672/{{ AMQP_NAME }}'
 
 # ElasticSearch Backup on Swift API
 backup_es_swift: True
