Comment out redis0 in inventory
It's not ready yet.

--- a/environments/production/inventory.ini
+++ b/environments/production/inventory.ini
@@ -152,7 +152,7 @@ formplayer3
 10.202.40.34 hostname=redis1-production ufw_private_interface=eth0 swap_size=1G
 
 [redis:children]
-redis0
+#redis0
 redis1
 
 [shareddir0]
