Downsize es{0,1}-india

--- a/environments/india/terraform.yml
+++ b/environments/india/terraform.yml
@@ -136,14 +136,14 @@ servers:
     os: bionic
 
   - server_name: "es0-india"
-    server_instance_type: "t3.xlarge"
+    server_instance_type: "t3.large"
     network_tier: "db-private"
     az: "a"
     volume_size: 40
     group: elasticsearch
     os: bionic
   - server_name: "es1-india"
-    server_instance_type: "t3.xlarge"
+    server_instance_type: "t3.large"
     network_tier: "db-private"
     az: "a"
     volume_size: 40
