--- a/src/commcare_cloud/ansible/roles/nginx/vars/cchq_ssl.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/vars/cchq_ssl.yml
@@ -11,7 +11,9 @@ nginx_sites:
     - name: "{{ deploy_env }}_formplayer"
       hosts: formplayer
       port: "{{ formplayer_port }}"
-      method: "hash $cookie_sessionid consistent"
+      # hash off sessionid cookie or X-FORMPLAYER-SESSION header
+      # but only one of the two will be present in any given request
+      method: "hash $cookie_sessionid$http_x_formplayer_session consistent"
    proxy_cache_path:
     - name: "hq_media_cache"
       path: "{{ www_home }}/hq_media/cache"
