--- a/src/commcare_cloud/ansible/roles/elasticsearch/defaults/main.yml
+++ b/src/commcare_cloud/ansible/roles/elasticsearch/defaults/main.yml
@@ -14,3 +14,4 @@ es_repository_name: "{{ deploy_env }}_es_snapshot"
 aws_plugin_version: "2.7.1"
 swift_plugin_version: "1.7.0"
 backup_es_swift: no
+elasticsearch_enable_inline_groovy_scripts: True
