--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -273,6 +273,13 @@ servers:
     volume_size: 100
     group: "shared_dir_host"
     os: trusty
+  - server_name: "shareddir1-production"
+    server_instance_type: t3.micro
+    network_tier: "db-private"
+    az: "a"
+    volume_size: 100
+    group: "shared_dir_host"
+    os: bionic
 
   - server_name: "kafka0-production"
     server_instance_type: t3.medium
