--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -31,6 +31,7 @@ nofile_limit: 65536
 redis_maxmemory: 6gb
 redis_maxmemory_policy: allkeys-lfu
 redis_auto_aof_rewrite_percentage: "50"
+redis_password: "{{ localsettings_private.REDIS_PASSWORD }}"
 
 kafka_log_dir: '{{ encrypted_root }}/kafka'
 
@@ -225,6 +226,7 @@ localsettings:
   REDIS_DB: '0'
   REDIS_HOST: "{{ groups.redis_cluster_master.0 }}"
   REDIS_PORT: '6379'
+  REDIS_PASSWORD: '{{ localsettings_private.REDIS_PASSWORD }}'
   REPEATERS_WHITELIST: []  # disable all repeaters on ICDS
   REMINDERS_QUEUE_ENABLED: True
   SMS_GATEWAY_URL:
