--- a/environments/production/aws-resources.yml
+++ b/environments/production/aws-resources.yml
@@ -23,7 +23,7 @@ kafka0-production: 10.202.40.70
 pgbouncer0-production: 10.202.40.58
 pgbouncer1-production: 10.202.40.8
 pgmain0-production: pgmain0-production.cl9dmuo3ok4h.us-east-1.rds.amazonaws.com
-pgproxy1-production: 10.202.40.54
+gproxy0-production: 10.202.40.126
 pgshard1-production: pgshard1-production.cl9dmuo3ok4h.us-east-1.rds.amazonaws.com
 pgshard2-production: pgshard2-production.cl9dmuo3ok4h.us-east-1.rds.amazonaws.com
 pgshard3-production: pgshard3-production.cl9dmuo3ok4h.us-east-1.rds.amazonaws.com
