--- a/environments/india/terraform.yml
+++ b/environments/india/terraform.yml
@@ -194,6 +194,7 @@ proxy_servers:
 
 rds_instances:
   - identifier: "pgmain0-india"
-    instance_type: "db.t2.xlarge"
+    instance_type: "db.t3.large"
     storage: 500
     multi_az: true
+    engine_version: 9.6.9
