--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -281,6 +281,14 @@ servers:
     volume_size: 160
     group: "kafka"
     os: trusty
+    
+  - server_name: "pgproxy1-production"
+    server_instance_type: t3.large
+    network_tier: "db-private"
+    az: "a"
+    volume_size: 80
+    group: "postgresql"
+    os: trusty
 
   - server_name: "pgproxy2-production"
     server_instance_type: t3.large
