--- a/environments/production/inventory.ini
+++ b/environments/production/inventory.ini
@@ -101,11 +101,16 @@ swap_size=2G
 [kafka0]
 10.202.40.70 hostname=kafka0-production ufw_private_interface=eth0 kafka_broker_id=1
 
+[kafka1]
+10.202.40.200 hostname=kafka1-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 kafka_broker_id=2
+
 [zookeeper:children]
 kafka0
+kafka1
 
 [kafka:children]
 kafka0
+kafka1
 
 [celery9]
 10.202.12.80 hostname=celery9-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
