--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -258,10 +258,6 @@ servers:
     volume_size: 60
     group: "redis"
     os: trusty
-<<<<<<< HEAD
-=======
-    
->>>>>>> 194ab51... Update terraform.yml
   - server_name: "redis0-production"
     server_instance_type: r5.xlarge
     network_tier: "db-private"
@@ -286,13 +282,13 @@ servers:
     group: "kafka"
     os: trusty
     
-  - server_name: "pgproxy1-production"
-    server_instance_type: t3.large
+  - server_name: "kafka1-production"
+    server_instance_type: t3.medium
     network_tier: "db-private"
     az: "a"
-    volume_size: 80
-    group: "postgresql"
-    os: trusty
+    volume_size: 160
+    group: "kafka"
+    os: bionic
 
   - server_name: "pgproxy2-production"
     server_instance_type: t3.large
