--- a/environments/india/terraform.yml
+++ b/environments/india/terraform.yml
@@ -151,7 +151,7 @@ servers:
     os: bionic
 
   - server_name: "formplayer1-india"
-    server_instance_type: "c5.xlarge"
+    server_instance_type: "t3.large"
     network_tier: "app-private"
     az: "a"
     volume_size: 200
