--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -228,7 +228,7 @@ servers:
     os: bionic
 
   - server_name: "pillow1-production"
-    server_instance_type: r5a.4xlarge
+    server_instance_type: r5a.4xlarge  # todo: switch to m5.4xlarge once r5a RI expires
     network_tier: "app-private"
     az: "c"
     volume_size: 150
