--- a/environments/production/inventory.ini
+++ b/environments/production/inventory.ini
@@ -153,18 +153,14 @@ formplayer3
 [redis0]
 10.202.40.233 hostname=redis0-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 swap_size=1G
 
-[redis1]
-10.202.40.34 hostname=redis1-production ufw_private_interface=eth0 swap_size=1G
-
 [redis:children]
-#redis0
-redis1
+redis0
 
-[shareddir0]
-10.202.40.191 hostname=shareddir0-production ufw_private_interface=eth0
+[shareddir1]
+10.202.40.218 hostname=shareddir1-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 
 [shared_dir_host:children]
-shareddir0
+shareddir1
 
 [es15]
 10.202.40.113 hostname=es15-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 elasticsearch_node_name=es15
