--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -251,13 +251,6 @@ servers:
     group: "formplayer"
     os: bionic
 
-  - server_name: "redis1-production"
-    server_instance_type: r5.xlarge
-    network_tier: "db-private"
-    az: "a"
-    volume_size: 60
-    group: "redis"
-    os: trusty
   - server_name: "redis0-production"
     server_instance_type: r5.xlarge
     network_tier: "db-private"
@@ -266,13 +259,13 @@ servers:
     group: "redis"
     os: bionic
 
-  - server_name: "shareddir0-production"
+  - server_name: "shareddir1-production"
     server_instance_type: t3.micro
     network_tier: "db-private"
     az: "a"
     volume_size: 100
     group: "shared_dir_host"
-    os: trusty
+    os: bionic
 
   - server_name: "kafka0-production"
     server_instance_type: t3.medium
