--- a/environments/icds-cas/postgresql.yml
+++ b/environments/icds-cas/postgresql.yml
@@ -26,6 +26,13 @@ pgbouncer_override:
   pgbouncer_pool_mode: transaction
   pgbouncer_pool_timeout: 1
   pgbouncer_reserve_pool: 5
+  pgbouncer_kernel_settings:
+    net.ipv4.ip_local_port_range: 1024 65535
+    net.ipv4.tcp_tw_reuse: 1
+    net.core.rmem_max: 16777216
+    net.core.wmem_max: 16777216
+    net.ipv4.tcp_max_syn_backlog: 4096
+    net.core.somaxconn: 1024
 
 postgres_override:
   postgresql_max_standby_delay: 180s
