--- a/environments/staging/terraform.yml
+++ b/environments/staging/terraform.yml
@@ -29,7 +29,7 @@ external_routes:
 
 servers:
   - server_name: "control0-staging"
-    server_instance_type: "t3.medium"
+    server_instance_type: "t3.small"
     network_tier: "app-private"
     az: "a"
     volume_size: 50
