--- a/environments/production/aws-resources.yml
+++ b/environments/production/aws-resources.yml
@@ -2,7 +2,7 @@ celery10-production: 10.202.12.142
 celery11-production: 10.202.12.27
 celery12-production: 10.202.12.101
 celery9-production: 10.202.12.80
-control-production: 10.202.10.79
+control1-production: 10.202.10.158
 couch12-production: 10.202.40.52
 couch13-production: 10.202.40.154
 couch14-production: 10.202.40.216
@@ -19,7 +19,6 @@ esmaster4-production: 10.202.41.247
 esmaster5-production: 10.202.40.226
 formplayer2-production: 10.202.10.129
 formplayer3-production: 10.202.10.13
-kafka0-production: 10.202.40.70
 kafka1-production: 10.202.40.200
 pgbouncer0-production: 10.202.40.58
 pgbouncer1-production: 10.202.40.8
