--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -35,6 +35,13 @@ servers:
     volume_size: 40
     group: "control"
     os: trusty
+  - server_name: "control1-production"
+    server_instance_type: "t3.medium"
+    network_tier: "app-private"
+    az: "a"
+    volume_size: 40
+    group: "control"
+    os: bionic
 
   - server_name: "djangomanage1-production"
     server_instance_type: m5.xlarge
