--- a/environments/production/inventory.ini
+++ b/environments/production/inventory.ini
@@ -228,6 +228,9 @@ couchproxy1
 [control1]
 10.202.10.158 hostname=control1-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 
+[control:children]
+control1
+
 [djangomanage1]
 10.202.10.54 hostname=djangomanage1-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 
