Add AppStatus Batch support for india cluster

--- a/environments/india/public.yml
+++ b/environments/india/public.yml
@@ -129,6 +129,7 @@ localsettings:
   TRANSFER_SERVER: 'nginx'
   WS4REDIS_CONNECTION_HOST: "{{ groups.redis.0 }}"
   OBFUSCATE_PASSWORD_FOR_NIC_COMPLIANCE: True
+  USER_REPORTING_METADATA_BATCH_ENABLED: True
   UCR_COMPARISONS:
     static-mpr_1_person_cases:
     static-mpr_2a_3_child_delivery_forms:
