--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -154,6 +154,9 @@ localsettings:
   INVOICE_STARTING_NUMBER: 5000
   KAFKA_API_VERSION: [0, 8, 2]
   LOCAL_LOGGING_CONFIG:
+    formatters:
+      kafka_audit:
+        format: '%(asctime)s,%(message)s'
     loggers:
       kafka_producer_audit:
         handlers: ['kafka_audit']
